/*
Copyright 2019 Gravitational, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package agentpb;

// ClusterRecovered represents a change in cluster state to a healthy state.
message ClusterRecovered {}

// ClusterDegraded represents a change in cluster state to a degraded state.
message ClusterDegraded {}

// ClusterUpgrade represents a cluster upgrade event.
// TODO
message ClusterUpgrade {}

// NodeAdded represents a cluster resize event in which a node is added to the
// cluster.
message NodeAdded {
  // Node specifies the node name.
  string node = 1;
}

// NodeRemoved represents a cluster resize event in which a node is removed from
// the cluster.
message NodeRemoved {
  // Node specifies the node name.
  string node = 1;
}

// NodeRecovered represents a change in node state to a healthy state.
message NodeRecovered {
    // Node specifies the node name.
    string node = 1;
}

// NodeDegraded represents a change in node state to a degraded state.
message NodeDegraded {
    // Node specifies the node name.
    string node = 1;
}

// ProbeSucceeded represents a probe result that changed from failure to succeessful.
message ProbeSucceeded {
    // Node specifies the node name.
    string node = 1;
    // Probe specifies the probe name.
    string probe = 2;
}

// ProbeFailed represents a probe result that changed from successful to failure.
message ProbeFailed {
    // Node specifies the node name.
    string node = 1;
    // Probe specifies the probe name.
    string probe = 2;
}
